# dnf

./: .git-commit-template  .gitignore  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .zuul.yaml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile  Makefile.in  PACKAGE-LICENSING  PLUGINS  README  README.API_CHANGES  README.md  README.rst  SWDB_README  TODO  VERSION.cmake  advisory-info.yaml  advisory-list.yaml  api.html  api_base.html  api_callback.html  api_cli.html  api_common.html  api_comps.html  api_conf.html  api_dnf.cli.html  api_dnf.html  api_dnf.rpmUtils.html  api_dnf.yum.html  api_exceptions.html  api_package.html  api_plugins.html  api_queries.html  api_repos.html  api_rpm.html  (+114 more)
.copr/: Makefile
.github/: CODEOWNERS
.tito/: tito.props
.tx/: config
_sources/: api.txt  api_base.txt  api_callback.txt  api_cli.txt  api_common.txt  api_comps.txt  api_conf.txt  api_dnf.cli.txt  api_dnf.rpmUtils.txt  api_dnf.txt  api_dnf.yum.txt  api_exceptions.txt  api_package.txt  api_plugins.txt  api_queries.txt  api_repos.txt  api_rpm.txt  api_sack.txt  api_transaction.txt  automatic.txt  cli_vs_yum.txt  command_ref.txt  conf_ref.txt  index.txt  release_notes.txt  user_faq.txt
bash-completion/: dnf-completion.bash
ci/: README  stackci.py
dnf/: CMakeLists.txt  __init__.py  __init__.py.in  arch.py  base.py  callback.py  comps.py  conf.py  const.py  const.py.in  crypto.py  dnssec.py  drpm.py  exceptions.py  goal.py  history.py  i18n.py  lock.py  logging.py  match_counter.py  modules.py  output.py  package.py  persistor.py  plugin.py  pycomp.py  queries.py  query.py  repo.py  repodict.py  sack.py  selector.py  subject.py  transaction.py  transaction_sr.py  util.py
dnf/automatic/: CMakeLists.txt  __init__.py  emitter.py  main.py
dnf/cli/: CMakeLists.txt  __init__.py  aliases.py  callback.py  cli.py  commands.py  completion_helper.py  completion_helper.py.in  demand.py  format.py  main.py  option_parser.py  output.py  progress.py  shell.py  term.py  utils.py  yumcommands.py  yummain.py
dnf/cli/commands/: CMakeLists.txt  __init__.py  alias.py  autoerase.py  autoremove.py  check.py  clean.py  deplist.py  distrosync.py  downgrade.py  eol.py  erase.py  group.py  history.py  install.py  makecache.py  mark.py  module.py  reinstall.py  remove.py  repolist.py  repoquery.py  search.py  shell.py  showvars.py  swap.py  updateinfo.py  upgrade.py  upgrademinimal.py  upgradeto.py
dnf/conf/: CMakeLists.txt  __init__.py  config.py  parser.py  read.py  substitutions.py
dnf/db/: CMakeLists.txt  __init__.py  addondata.py  group.py  history.py  swdb_transformer.py  types.py
dnf/module/: CMakeLists.txt  __init__.py  exceptions.py  metadata_loader.py  module_base.py  persistor.py  repo_module.py  repo_module_dict.py  repo_module_stream.py  repo_module_version.py  subject.py
dnf/modules/: CMakeLists.txt  __init__.py  metadata_loader.py  modules.py
dnf/rpm/: CMakeLists.txt  __init__.py  connection.py  error.py  miscutils.py  transaction.py
dnf/rpmUtils/: CMakeLists.txt  __init__.py  arch.py  connection.py  error.py  miscutils.py  oldUtils.py  transaction.py  updates.py
dnf/rpmUtils/tests/: updates-test.py
dnf/yum/: CMakeLists.txt  Errors.py  Makefile  __init__.py  base.py  callbacks.py  cli.py  comps.py  config.py  constants.py  depsolve.py  failover.py  history.py  i18n.py  logginglevels.py  main.py  mdparser.py  metalink.py  misc.py  option_parser.py  packageSack.py  packages.py  parser.py  pgpmsg.py  pkgtag_db.py  plugins.py  repoMDObject.py  repos.py  rpmsack.py  rpmtrans.py  sqlitesack.py  sqlutils.py  swdb_transformer.py  transactioninfo.py  update_md.py  yumRepo.py
dnf/yum-cli/: CMakeLists.txt  cli.py  shell.py  yumcommands.py  yummain.py
dnf/yum/commands/: CMakeLists.txt  __init__.py  deplist.py
doc/: CMakeLists.txt  __init__.py  api.rst  api_base.rst  api_callback.rst  api_cli.rst  api_commands.rst  api_common.rst  api_comps.rst  api_conf.rst  api_dnf.cli.rst  api_dnf.yum.rst  api_exceptions.rst  api_module.rst  api_package.rst  api_plugins.rst  api_queries.rst  api_repos.rst  api_rpm.rst  api_sack.rst  api_selector.rst  api_transaction.rst  api_vs_yum.rst  automatic.rst  cli_vs_yum.rst  command_ref.rst  conf.py  conf.py.in  conf_ref.rst  dnf-1_vs_dnf-2.rst  index.rst  modularity.rst  release_notes.rst  rhbug.py  summaries_cache  transaction_json.rst  use_cases.rst  user_faq.rst  yum-dnf.rst
doc/examples/: install_extension.py  install_plugin.py  list_extras_extension.py  list_obsoletes_plugin.py
docs/: .gitignore  Makefile  Makefile.in  comps.rng  repomd.dtd  yum-arch.8  yum-shell.8  yum-updatesd.8  yum-updatesd.conf.5  yum.8  yum.conf.5
etc/: CMakeLists.txt  Makefile  Makefile.in  collect_dnf.conf  dnf-makecache.cron  version-groups.conf  yum-daily.yum  yum-updatesd.conf  yum-updatesd.init  yum-weekly.yum  yum.bash  yum.conf  yum.console  yum.cron  yum.cron.weekly  yum.init  yum.logrotate  yum.pam
etc/bash_completion.d/: CMakeLists.txt  dnf  dnf-3  dnf-3-completion.bash  dnf-completion.bash
etc/systemd/: CMakeLists.txt  dnf-automatic-download.service  dnf-automatic-download.timer  dnf-automatic-install.service  dnf-automatic-install.timer  dnf-automatic-notifyonly.service  dnf-automatic-notifyonly.timer  dnf-automatic.service  dnf-automatic.timer  dnf-makecache.service  dnf-makecache.timer
package/: archive  build-test-rpm  dnf.spec  dnf.spec.in
po/: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  Makefile.in  Makevars  POTFILES.in  POTFILES.skip  ar.po  be.po  bg.po  bn.po  bn_IN.po  ca.po  cs.po  da.po  de.po  dnf-1.pot  dnf.pot  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fil.po  fr.po  fur.po  gd.po  gd_GB.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  id_ID.po  ie.po  it.po  ja.po  (+35 more)
posts/: bootloadercfg.py  lilo.py  up2datetheft.py
rel-eng/: README  releasers.conf  tito.props
repomd/: Makefile  mdErrors.py  mdUtils.py  packageObject.py  packageSack.py  repoMDObject.py  test.py
rpmUtils/: Makefile  __init__.py  arch.py  miscutils.py  oldUtils.py  transaction.py  updates.py
scripts/: dnf_pylint  pylint_false_positives  (+5 more)
(+1279 files in other folders)
