[metadata]
name = dnf
#version = 0.1
author = Red Hat
url = https://github.com/rpm-software-management/dnf
description = Package manager based on libdnf and libsolv. Replaces YUM.
long_description = file: README.rst
keywords = package manager, yum, Red Hat, Fedora, SUSE, CentOS
license = GPL-2.0
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Environment :: Other Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GPLv2
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
    #libdnf # managed by system package manager
    #libcomps
    #hawkey
    #rpm
    #dbus
    enum34 ; python_version < '3'

zip_safe = True
packages = dnf, dnf.automatic, dnf.cli, dnf.conf, dnf.db, dnf.module, dnf.rpm, dnf.yum
setup_requires = setuptools_scm;

[options.entry_points]
console_scripts =
    dnf = dnf.cli.main:user_main
    dnf-automatic = dnf.automatic.main:main

