FILE(GLOB dnf_SRCS *.py)
INSTALL (FILES ${dnf_SRCS} DESTINATION ${PYTHON_INSTALL_DIR}/dnf)
INSTALL (FILES ${CMAKE_CURRENT_BINARY_DIR}/__init__.py DESTINATION ${PYTHON_INSTALL_DIR}/dnf)
INSTALL (FILES ${CMAKE_CURRENT_BINARY_DIR}/const.py DESTINATION ${PYTHON_INSTALL_DIR}/dnf)

ADD_SUBDIRECTORY (automatic)
ADD_SUBDIRECTORY (cli)
ADD_SUBDIRECTORY (conf)
ADD_SUBDIRECTORY (rpm)
ADD_SUBDIRECTORY (yum)
