SET(yum_SRCS __init__.py
	     callbacks.py
	     comps.py
	     config.py
	     constants.py
	     Errors.py
	     failover.py
	     history.py
	     i18n.py
	     logginglevels.py
	     mdparser.py
	     metalink.py
	     misc.py
	     packageSack.py
	     packages.py
	     parser.py
	     pgpmsg.py
	     pkgtag_db.py
	     plugins.py
	     repoMDObject.py
	     repos.py
	     rpmsack.py
	     rpmtrans.py
	     sqlitesack.py
	     sqlutils.py
	     transactioninfo.py
	     update_md.py
	     yumRepo.py)
INSTALL (FILES ${yum_SRCS} DESTINATION ${PYTHON_INSTALL_DIR}/dnf/yum)
